운행일보 완료

--- a/accounting/templates/accounting/collect.html
+++ b/accounting/templates/accounting/collect.html
@@ -258,7 +258,7 @@
                         <div class="popupArticleBox">
                             <div class="popupArticleDouble">
                                 <label for="" class="popupArticleLabel"><span class="importantStar">*</span>공급가액</label>
-                                <input autocomplete="off" name="value" type="text" class="popupArticleinput amountInput essential numberOnly length100">
+                                <input autocomplete="off" name="value" type="text" class="popupArticleinput amountInput essential length100">
                             </div>
                             <div class="popupArticleDouble">
                                 <label for="" class="popupArticleLabel"><span class="importantStar">*</span>부가세</label>
